--- a/index.html
+++ b/index.html
@@ -11,36 +11,23 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="todoApp">
-            <h1>Todo App <img src="img/icon.png" alt="icon-list"></h1>
+    <h1>Todo App</h1>
 
-            <div>
-                <input type="radio" name="filter" id="filterAll" checked>
-                <label for="filterAll">All</label>
+    <div class="radioFilter">
 
-                <input type="radio" name="filter" id="filterOpen">
-                <label for="filterOpen">Open</label>
-
-                <input type="radio" name="filter" id="filterDone">
-                <label for="filterDone">Done</label>
-            </div>
-
-            <button id="removeDoneBtn">Remove Done Todos</button>
-
-            <input type="text" id="todoInput" placeholder="What`s up?">
-
-            <button id="addTodoBtn">Add Todo</button>
-
-            <div id="todoList"></div>
-
-            <script src="script.js"></script>
-        </div>
-
+        <label for="filterAll">All <input type="radio" name="filter" id="filterAll" checked></label>
+        <label for="filterOpen">Open <input type="radio" name="filter" id="filterOpen"></label>
+        <label for="filterDone">Done <input type="radio" name="filter" id="filterDone"></label>
     </div>
 
+    <button id="removeDoneBtn">Remove Done Todos</button>
 
+    <div>
+        <input type="text" id="todoInput" placeholder="What`s up?">
+        <button id="addTodoBtn">Add</button>
+    </div>
 
+    <div id="todoList"></div>
 
     <script src="script.js"></script>
 </body>
