added comments & code to js file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Todo App</h1>
 
     <div class="radioFilter">
-
+        <!-- checked ist default radio button markierung -->
         <label for="filterAll">All <input type="radio" name="filter" id="filterAll" checked></label>
         <label for="filterOpen">Open <input type="radio" name="filter" id="filterOpen"></label>
         <label for="filterDone">Done <input type="radio" name="filter" id="filterDone"></label>
@@ -27,7 +27,9 @@
         <button id="addTodoBtn">Add</button>
     </div>
 
-    <div id="todoList"></div>
+    <div id="todoList">
+        <!-- Hier die Todos als Liste mit den checkboxen zum abhaken -->
+    </div>
 
     <script src="script.js"></script>
 </body>
