corrected class name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Todo App</h1>
 
-    <div class="radioFilter">
+    <div class="radioBtn">
         <!-- checked ist default radio button markierung -->
         <label for="filterAll">All <input type="radio" name="filter" id="filterAll" checked></label>
         <label for="filterOpen">Open <input type="radio" name="filter" id="filterOpen"></label>
