added code state management

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div id="todoList">
-        <!-- Hier die Todos als Liste mit den checkboxen zum abhaken -->
+        <!-- Hier die Todos als Liste mit den checkboxen zum abhaken die dann durchgestrichen sind -->
     </div>
 
     <script src="script.js"></script>
