--- a/index.html
+++ b/index.html
@@ -11,26 +11,30 @@
 </head>
 
 <body>
-    <h1>Todo App</h1>
+    <div class="container">
+        <h1>Todo App</h1>
 
-    <div class="radioBtn">
-        <!-- checked ist default radio button markierung -->
-        <label for="filterAll">All <input type="radio" name="filter" id="filterAll" checked></label>
-        <label for="filterOpen">Open <input type="radio" name="filter" id="filterOpen"></label>
-        <label for="filterDone">Done <input type="radio" name="filter" id="filterDone"></label>
+        <div class="radioBtn">
+            <!-- All - checked steht für default radio Button Markierung -->
+            <label for="filterAll">All <input type="radio" name="filter" id="filterAll" checked></label>
+            <label for="filterOpen">Open <input type="radio" name="filter" id="filterOpen"></label>
+            <label for="filterDone">Done <input type="radio" name="filter" id="filterDone"></label>
+        </div>
+
+        <div class="inputAddBtn">
+            <input type="text" id="todoInput" placeholder="What`s up?">
+            <button id="addTodoBtn">Add</button>
+        </div>
+
+        <div class="todoList">
+            <ul>
+                <input type="checkbox" name="checkbox">
+                <li></li>
+            </ul>
+        </div>
+
+        <button id="removeDoneBtn">Remove</button>
     </div>
-
-    <button id="removeDoneBtn">Remove Done Todos</button>
-
-    <div>
-        <input type="text" id="todoInput" placeholder="What`s up?">
-        <button id="addTodoBtn">Add</button>
-    </div>
-
-    <div id="todoList">
-        <!-- Hier die Todos als Liste mit den checkboxen zum abhaken die dann durchgestrichen sind -->
-    </div>
-
     <script src="script.js"></script>
 </body>
 
