corrected placeholder text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="inputAddBtn">
-            <input type="text" id="todoInput" placeholder="What`s up?">
+            <input type="text" id="todoInput" placeholder="Tell me what`s to do?">
             <button id="addTodoBtn">Add</button>
         </div>
 
