Added styling & functional code

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
 
         <div class="inputAddBtn">
-            <input type="text" id="todoInput" placeholder="Tell me what`s to do?">
+            <input type="text" id="todoInput" placeholder="What's on today?">
             <button id="addTodoBtn">Add</button>
         </div>
 
         <div class="todoList">
             <ul>
-                <input type="checkbox" name="checkbox">
+                <input type="checkbox" name="checkbox" class="customCheckbox">
                 <li></li>
             </ul>
         </div>
