--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 
 <body>
+    <!-- CONTAINER  -->
     <div class="container">
         <h1>Todo App</h1>
 
+        <!-- FILTER BUTTON -->
         <div class="radioBtn">
             <!-- All - checked steht für default radio Button Markierung -->
             <label for="filterAll">All <input type="radio" name="filter" id="filterAll" checked></label>
@@ -21,20 +23,26 @@
             <label for="filterDone">Done <input type="radio" name="filter" id="filterDone"></label>
         </div>
 
+        <!-- USER INPUT FIELD & ADD BUTTON -->
         <div class="inputAddBtn">
             <input type="text" id="todoInput" placeholder="What's on today?">
             <button id="addTodoBtn">Add</button>
         </div>
 
+        <!-- USER TODO LIST -->
         <div class="todoList">
             <ul>
+                <!-- CHECKBOXEN -->
                 <input type="checkbox" name="checkbox" class="customCheckbox">
                 <li></li>
             </ul>
         </div>
 
+        <!-- REMOVE BUTTON -->
         <button id="removeDoneBtn">Remove</button>
     </div>
+
+    <!-- SCRIPT -->
     <script src="script.js"></script>
 </body>
 
