--- a/index.html
+++ b/index.html
@@ -12,46 +12,41 @@
 </head>
 
 <body>
-    <!-- MOBIL-VIEW-AREA -->
     <!-- BOX  -->
-    <!-- FILTER -->
-    <!-- USER INPUT FIELD; ADD & REMOVE BUTTON -->
-    <!-- REMOVE BUTTON -->
-    <!-- USER TODO LIST -->
-    <!-- CHECKBOXEN -->
 
-    <!-- DESKTOP-VIEW-AREA-->
-    <!-- BOX  -->
-    <section id="desktopView">
-        <div class="box">
-            <h1>Todo App</h1>
+    <div class="box">
+        <h1>Todo App</h1>
 
-            <!-- FILTER -->
-            <div class="radioBtn">
-                <!-- All - checked steht für default radio Button Markierung -->
-                <label for="filterAll">All <input type="radio" name="filter" id="filterAll" checked></label>
-                <label for="filterOpen">Open <input type="radio" name="filter" id="filterOpen"></label>
-                <label for="filterDone">Done <input type="radio" name="filter" id="filterDone"></label>
-            </div>
-
-            <!-- USER INPUT FIELD; ADD & REMOVE BUTTON -->
-            <div class="inputAddBtn">
-                <input type="text" id="todoInput" placeholder="What's on today?">
-                <button id="addTodoBtn">Add</button>
-                <!-- REMOVE BUTTON -->
-                <button id="removeDoneBtn">Remove</button>
-            </div>
-
-            <!-- USER TODO LIST -->
-            <div class="todoList">
-                <ul>
-                    <!-- CHECKBOXEN -->
-                    <input type="checkbox" name="checkbox" class="customCheckbox">
-                    <li></li>
-                </ul>
-            </div>
+        <!-- FILTER -->
+        <div class="radioBtn">
+            <!-- All - checked steht für default radio Button Markierung -->
+            <label for="filterAll">All <input type="radio" name="filter" id="filterAll" checked></label>
+            <label for="filterOpen">Open <input type="radio" name="filter" id="filterOpen"></label>
+            <label for="filterDone">Done <input type="radio" name="filter" id="filterDone"></label>
         </div>
-    </section>
+
+        <div>
+            <input type="text" id="todoInput" placeholder="What's on today?">
+        </div>
+
+        <!-- USER INPUT FIELD; ADD & REMOVE BUTTON -->
+        <div class="inputAddBtn">
+
+            <button id="addTodoBtn">Add</button>
+            <!-- REMOVE BUTTON -->
+            <button id="removeDoneBtn">Remove</button>
+        </div>
+
+        <!-- USER TODO LIST -->
+        <div class="todoList">
+            <ul>
+                <!-- CHECKBOXEN -->
+                <input type="checkbox" name="checkbox" class="customCheckbox">
+                <li></li>
+            </ul>
+        </div>
+    </div>
+
 
     <!-- SCRIPT -->
     <script src="script.js"></script>
